--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
+    "next": "^13.4.3",
     "nodemon": "^2.0.22"
   }
 }
