--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,6 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
-    "next": "^13.4.3",
-    "nodemon": "^2.0.22"
+    "next": "^13.4.3"
   }
 }
