--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGO_URL=mongodb+srv://admin:admin@cluster0.iw0lwtj.mongodb.net/?retryWrites=true&w=majority
+# MONGO_URL=mongodb+srv://admin:admin@cluster0.iw0lwtj.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://photonism:JO6mxox15qhBjhx1@cluster0.enwqmgv.mongodb.net/photonism_kripto?retryWrites=true&w=majority&appName=photonism_kripto
 PORT=5000
-JWT_SECRET=secret123
+JWT_SECRET=JWT_SECRET
 PRIVATE_RSA_KEY=MTM5MTY4MSw0MjY4MzQ3
